fix jumping cursor in story name field

--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -329,7 +329,7 @@
       width: 12px;
     }
     input[type="date"] {
-      width: 100px;
+      width: 110px;
     }
     input[type="datetime-local"] {
       width: 140px;
